Specify JVM flags required by turbine using `.mvn/jvm.config`
see https://github.com/google/error-prone/issues/2786

PiperOrigin-RevId: 418873888